use content on index#

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Bees in a Pod
         {% if post.main_pic %}
         <img src="{{ post.main_pic }}">
         {% endif %}
-        <p>{{post.description}}</p>
+        <p>{{post.content}}</p>
     </section>
 {% endfor %}
